+ Added alert dialog for create game room

--- a/features/home/src/main/res/layout/activity_home.xml
+++ b/features/home/src/main/res/layout/activity_home.xml
@@ -30,7 +30,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/connect"
-            android:onClick="@{() -> viewModel.showToast()}"
             android:layout_marginTop="24dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -40,7 +39,8 @@
             android:id="@+id/create_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/Create"
+            android:text="@string/create"
+            android:onClick="@{() -> viewModel.onClickCreateButton()}"
             android:layout_marginTop="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
