--- a/features/home/src/main/res/layout/activity_home.xml
+++ b/features/home/src/main/res/layout/activity_home.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
         <variable
@@ -18,6 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10"
+            android:gravity="center"
             android:hint="@string/code"
             android:inputType="text"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -27,23 +27,25 @@
 
         <Button
             android:id="@+id/connect_btn"
-            android:layout_width="wrap_content"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="@string/connect"
             android:layout_marginTop="24dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            android:text="@string/connect"
+            app:layout_constraintEnd_toEndOf="@+id/editTextCode"
+            app:layout_constraintStart_toStartOf="@+id/editTextCode"
             app:layout_constraintTop_toBottomOf="@+id/editTextCode" />
 
         <Button
             android:id="@+id/create_btn"
-            android:layout_width="wrap_content"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="@string/create"
-            android:onClick="@{() -> viewModel.onClickCreateButton()}"
             android:layout_marginTop="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            android:onClick="@{() -> viewModel.onClickCreateButton()}"
+            android:text="@string/create"
+            app:layout_constraintEnd_toEndOf="@+id/connect_btn"
+            app:layout_constraintStart_toStartOf="@+id/connect_btn"
             app:layout_constraintTop_toBottomOf="@+id/connect_btn" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
