--- a/features/lobby/src/main/res/layout/activity_lobby.xml
+++ b/features/lobby/src/main/res/layout/activity_lobby.xml
@@ -27,5 +27,13 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/start_btn" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
