--- a/features/home/src/main/res/layout/activity_home.xml
+++ b/features/home/src/main/res/layout/activity_home.xml
@@ -10,67 +10,124 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:id="@+id/home_activity"
         android:background="@drawable/background">
         <Button
             android:id="@+id/button2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
-            android:elevation="8dp"
             android:background="@drawable/shape_button"
             android:gravity="center|center_horizontal"
             android:text="@string/new_game"
             android:textColor="#FFFFFF"
             android:textSize="16sp"
             android:onClick="@{() -> viewModel.onClickCreateButton()}"
-            app:layout_constraintStart_toStartOf="@+id/textView3"
-            app:layout_constraintTop_toBottomOf="@+id/textView3" />
-  
+            app:layout_constraintStart_toStartOf="@+id/input_code"
+            app:layout_constraintTop_toBottomOf="@+id/input_code" />
+
 
         <Button
             android:id="@+id/button3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
-            android:elevation="8dp"
             android:onClick="@{() -> viewModel.onCLickConnectButton()}"
             android:background="@drawable/shape_button"
             android:gravity="center|center_horizontal"
             android:text="@string/connect"
             android:textSize="16sp"
             android:textColor="#FFFFFF"
-            app:layout_constraintEnd_toEndOf="@+id/textView3"
-            app:layout_constraintTop_toBottomOf="@+id/textView3" />
+            app:layout_constraintEnd_toEndOf="@+id/input_code"
+            app:layout_constraintTop_toBottomOf="@+id/input_code" />
 
-        <EditText
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
+
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/input_user_name"
+            android:layout_width="310dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="100dp"
-            android:elevation="8dp"
             android:background="@drawable/shape_input_text"
-            android:gravity="center|center_horizontal"
-            android:hint="@string/nickname"
-            android:textSize="20sp"
-            android:text="@={viewModel.userName}"
+            android:layout_marginBottom="100dp"
+            app:cardCornerRadius="12dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent">
 
-        <EditText
-            android:id="@+id/textView3"
-            android:layout_width="wrap_content"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+                <EditText
+                    android:id="@+id/textView2"
+                    android:layout_width="310dp"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/shape_input_text"
+                    android:gravity="center|center_horizontal"
+                    android:singleLine="true"
+                    android:layout_marginStart="4dp"
+                    android:layout_marginEnd="4dp"
+                    android:paddingEnd="2dp"
+                    android:paddingStart="2dp"
+                    android:hint="@string/nickname"
+                    android:textSize="20sp"
+                    android:text="@={viewModel.userName}"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/input_code"
+            android:layout_width="310dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:textSize="20sp"
-            android:elevation="8dp"
             android:background="@drawable/shape_input_text"
-            android:gravity="center|center_horizontal"
-            android:hint="@string/code"
-            android:text="@={viewModel.gameCode}"
+            android:layout_marginTop="16dp"
+            app:cardCornerRadius="12dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView2" />
+            app:layout_constraintTop_toBottomOf="@+id/input_user_name">
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <EditText
+                    android:id="@+id/textView3"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/shape_input_text"
+                    android:gravity="center|center_horizontal"
+                    android:hint="@string/code"
+                    android:singleLine="true"
+                    android:text="@={viewModel.gameCode}"
+                    android:textSize="20sp"
+                    android:layout_marginStart="4dp"
+                    android:layout_marginEnd="4dp"
+                    android:paddingEnd="2dp"
+                    android:paddingStart="2dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="@id/imageButton"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <ImageButton
+                    android:id="@+id/imageButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="6dp"
+                    android:background="@drawable/ic_baseline_help_24"
+                    android:onClick="@{() -> viewModel.onClickInfoAboutCodeButton()}"
+                    android:src="@drawable/ic_baseline_help_24"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </androidx.cardview.widget.CardView>
+
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
