--- a/features/home/src/main/res/values/colors.xml
+++ b/features/home/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="colorSecondaryLight">#6bf4ff</color>
     <color name="colorSecondaryDark">#0090a7</color>
     <color name="colorAccent">#04D100</color>
+
+    <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
 </resources>
