--- a/features/game/src/main/res/drawable/ic_baseline_send_24.xml
+++ b/features/game/src/main/res/drawable/ic_baseline_send_24.xml
@@ -3,9 +3,8 @@
     android:height="32dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="?attr/colorAccent"
     android:autoMirrored="true">
   <path
-      android:fillColor="@color/colorAccent"
+      android:fillColor="@color/white"
       android:pathData="M2.01,21L23,12 2.01,3 2,10l15,2 -15,2z"/>
 </vector>
