--- a/features/game/src/main/res/layout/activity_game.xml
+++ b/features/game/src/main/res/layout/activity_game.xml
@@ -13,70 +13,114 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:weightSum="3">
+        android:weightSum="4"
+        android:background="@color/white">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_weight="1">
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/users"
+            <TextView
+                android:id="@+id/word"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                android:fontFamily="@font/nova_flat"
+                android:gravity="center"
+                android:background="@color/white"
+                android:textColor="@color/colorPrimaryDark"
+                android:text="domek"
+                android:textSize="36sp"
+                android:layout_marginTop="8dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="domek" />
+
+            <TextView
+                android:id="@+id/game_code"
+                android:background="@android:color/transparent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="4dp"
+                android:text=""
+                android:textSize="18sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="K60NGA"/>
+            <pl.sose1.base.view.PaintingView
+                android:id="@+id/painting_view"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_marginTop="4dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/word" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
+
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/chat"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="2"
-            android:background="@drawable/gradient_message_section"
-            app:layout_constraintTop_toBottomOf="@+id/users">
+            android:background="@drawable/shape_chat"
+            android:layout_weight="3">
+
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/messages"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:background="@android:color/transparent"
+                android:layout_marginTop="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="48dp"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                app:layout_constraintBottom_toTopOf="@+id/messageContent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:itemCount="5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/input_chat"
+                tools:itemCount="2"
                 tools:listitem="@layout/item_message_send"/>
 
-            <EditText
-                android:id="@+id/messageContent"
-                android:layout_width="0dp"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/input_chat"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginBottom="4dp"
-                android:background="@drawable/shape_input_message"
-                android:hint="Aa"
-                android:padding="10dp"
-                android:text="@={viewModel.messageContent}"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/button"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="48dp"
+                android:background="@drawable/shape_input_chat"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/messages" />
+                app:layout_constraintBottom_toBottomOf="parent">
 
-            <ImageButton
-                android:id="@+id/button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/ic_baseline_send_24"
-                android:layout_marginEnd="8dp"
-                app:layout_constraintBottom_toBottomOf="@+id/messageContent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/messageContent"
-                android:onClick="@{() -> viewModel.sendMessage()}" />
+                <EditText
+                    android:id="@+id/messageContent"
+                    android:layout_width="0dp"
+                    android:layout_height="30dp"
+                    android:background="@android:color/transparent"
+                    android:hint="Aa"
+                    android:paddingStart="8dp"
+                    android:textColor="@color/white"
+                    android:textSize="18sp"
+                    android:layout_margin="6dp"
+                    android:text="@={viewModel.messageContent}"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintEnd_toStartOf="@id/send_button"/>
+                <ImageButton
+                    android:id="@+id/send_button"
+                    android:layout_width="36dp"
+                    android:layout_height="36dp"
+                    android:background="@drawable/ic_baseline_send_24"
+                    android:src="@drawable/ic_baseline_send_24"
+                    android:onClick="@{() -> viewModel.sendMessage()}"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:padding="4dp"
+                    android:layout_margin="4dp" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </LinearLayout>
 </layout>
