--- a/features/game/src/main/res/layout/activity_game.xml
+++ b/features/game/src/main/res/layout/activity_game.xml
@@ -20,6 +20,19 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1">
+
+            <TextView
+                android:id="@+id/game_code"
+                android:background="@android:color/transparent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="4dp"
+                android:text=""
+                android:textSize="14sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="K60NGA"/>
+
             <TextView
                 android:id="@+id/word"
                 android:layout_width="match_parent"
@@ -36,23 +49,35 @@
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="domek" />
 
-            <TextView
-                android:id="@+id/game_code"
-                android:background="@android:color/transparent"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/brush_tools"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="4dp"
-                android:text=""
-                android:textSize="18sp"
-                app:layout_constraintStart_toStartOf="parent"
+                android:background="@android:color/transparent"
+                android:elevation="2dp"
+                android:layout_margin="8dp"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:text="K60NGA"/>
-            <pl.sose1.base.view.PaintingView
+                app:layout_constraintEnd_toEndOf="parent">
+
+                <ImageButton
+                    android:id="@+id/color_button"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:foregroundGravity="center"
+                    android:background="@drawable/ic_green_circle"
+                    android:src="@drawable/ic_baseline_color_lens"
+                    android:onClick="@{() -> viewModel.changeBrushColor()}"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"/>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <pl.sose1.ui.PaintingView
                 android:id="@+id/painting_view"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_marginTop="4dp"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/word" />
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -64,15 +89,12 @@
             android:layout_height="match_parent"
             android:background="@drawable/shape_chat"
             android:layout_weight="3">
-
-
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/messages"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:background="@android:color/transparent"
                 android:layout_marginTop="8dp"
-                android:layout_marginStart="8dp"
                 android:layout_marginBottom="8dp"
                 android:layout_marginEnd="48dp"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
