--- a/features/game/src/main/res/layout/activity_game.xml
+++ b/features/game/src/main/res/layout/activity_game.xml
@@ -28,7 +28,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="4dp"
                 android:text=""
-                android:textSize="14sp"
+                android:textSize="18sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="K60NGA"/>
@@ -41,7 +41,7 @@
                 android:gravity="center"
                 android:background="@color/white"
                 android:textColor="@color/colorPrimaryDark"
-                android:text="domek"
+                android:text=""
                 android:textSize="36sp"
                 android:layout_marginTop="8dp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -64,11 +64,13 @@
                     android:layout_width="70dp"
                     android:layout_height="70dp"
                     android:foregroundGravity="center"
+                    android:visibility="invisible"
                     android:background="@drawable/ic_green_circle"
                     android:src="@drawable/ic_baseline_color_lens"
                     android:onClick="@{() -> viewModel.changeBrushColor()}"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"/>
+                    app:layout_constraintEnd_toEndOf="parent"
+                    tools:visibility="visible"/>
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <pl.sose1.ui.painting.PaintingView
