--- a/features/game/src/main/res/layout/activity_game.xml
+++ b/features/game/src/main/res/layout/activity_game.xml
@@ -42,12 +42,12 @@
                 android:background="@color/white"
                 android:textColor="@color/colorPrimaryDark"
                 android:text=""
-                android:textSize="36sp"
+                android:textSize="32sp"
                 android:layout_marginTop="8dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:text="domek" />
+                tools:text="domek domek" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/brush_tools"
@@ -56,7 +56,7 @@
                 android:background="@android:color/transparent"
                 android:elevation="2dp"
                 android:layout_margin="8dp"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/word"
                 app:layout_constraintEnd_toEndOf="parent">
 
                 <ImageButton
