--- a/features/game/src/main/res/anim/bottom_sheet_info_slide_up.xml
+++ b/features/game/src/main/res/anim/bottom_sheet_info_slide_up.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android"
-    android:fillAfter="true"
-    android:duration="500"
+    android:duration="600"
     android:interpolator="@android:anim/accelerate_decelerate_interpolator">
     <translate
-        android:fromXDelta="200"
-        android:toXDelta="-5%" />
+        android:fromYDelta="0%"
+        android:toYDelta="-100%" />
 </set>
+
