--- a/features/game/src/main/res/anim/info_slide_down.xml
+++ b/features/game/src/main/res/anim/info_slide_down.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android"
-    android:ordering="together">
+    android:ordering="together"
+    android:duration="300"
+    android:interpolator="@android:anim/accelerate_decelerate_interpolator">
     <translate
-        android:duration="300"
         android:fromYDelta="-50%p"
         android:toYDelta="0"
         android:startOffset="1500"/>
     <scale
-        android:duration="300"
         android:fromXScale="1.5"
         android:fromYScale="1.5"
         android:pivotX="50%"
