--- a/features/game/src/main/res/anim/info_slide_up.xml
+++ b/features/game/src/main/res/anim/info_slide_up.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android"
-   android:ordering="together">
+   android:ordering="together"
+    android:duration="600"
+    android:interpolator="@android:anim/accelerate_decelerate_interpolator">
     <translate
-        android:duration="300"
         android:fromYDelta="0"
         android:toYDelta="-50%p" />
     <scale
-        android:duration="300"
         android:fromXScale="0.25"
         android:fromYScale="0.25"
         android:pivotX="50%"
